--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>Prodavachnik</title>
-    <script src="scripts/jquery-3.1.1.min.js"></script>
-    <script src="scripts/prodavachnik.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles/prodavachnik.css" />
+    <script src="./scripts/jquery-3.1.1.min.js"></script>
+    <script src="./scripts/prodavachnik.js"></script>
+    <link rel="stylesheet" type="text/css" href="./styles/prodavachnik.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
-    <script src="../node_modules/handlebars/dist/handlebars.js"></script>
+    <script src="./node_modules/handlebars/dist/handlebars.js"></script>
 </head>
 
 <body>
